[package]
name = "openpay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
serde_json = "1"
base64 = "0.13"
rand = "0.8"
sha2 = "0.10"

[dependencies.axum]
version = "0.6.0-rc"
features = ["headers", "multipart", "ws", "http2"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive", "unstable", "alloc", "rc"]

[dependencies.reqwest]
version = "0.11"
default-features=false
features = ["rustls-tls-native-roots", "json", "brotli", "gzip", "deflate"]