[package]
name = "openpay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
oauth2 = "4"

[dependencies.axum]
version = "0.6"
features = ["headers", "multipart", "ws", "http2"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive", "unstable", "alloc", "rc"]

[dependencies.reqwest]
version = "0.11"
default-features=false
features = ["rustls-tls-native-roots"]